1999-11-03  Hippo

	* FvwmIconMan/*: New config options *FvwmIconMan*Reverse

1999-11-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* FvwmIconMan/xmanager.c (set_win_iconified):
	-Wall fixes

	* FvwmDragWell/fvwmDragWell.c:
	* FvwmDragWell/xdndDragSource.c:
	* FvwmDragWell/cursorStuff.c:
	fixed tons of -Wall warnings, bugs, etc.
	added GPL notice to all FvwmDragWell source files

1999-10-31  Dan Espen  <dane@mk.telcordia.com>

	* FvwmDragWell/Makefile.am (INCLUDES): Remove /libs from top_srcdir.

1999/10/30  Bob Woodside  <proteus@pcnet.com>

	* FvwmIdent/FvwmIdent.h:
	* FvwmIdent/FvwmIdent.c:  Belated GSFR. This was overlooked in
	the original GSFR because it had the old flag values coded inline
	instead of relying on the header, so it never got any build
	errors when the flags were changed. (Bug Rept #499)

1999-10-30  Olivier Chapuis  olivier.chapuis@free.fr

	* modules/FvwmForm/FvwmRootCursor.:
	* modules/FvwmForm/FvwmRootCursor.pl:
	Replace xsetroot by CursorStyle ROOT.

1999-10-26  Brad Giaccio

	* FvwmIconMan/*.c: New config option *NoIconAction

1999-10-26  Michael Han

	* FvwmIconMan/*.c: FvwmIconam can use an alias. New resolutions: !desk, !page

1999-10-25  Hippo

	* FvwmHeme/FvwmTheme.c: Removed color leaks when changing pixmap or
	gradient.  bg and fg default to average and contrast.

1999-10-24  Dan Espen  <dane@mk.telcordia.com>

	* FvwmForm/ReadXServer.c (ReadXServer): Fix problem caused by the usage
	of XDrawString when typing more characters than an input field can
	hold.

1999-10-24  Chris Rankin

	* FvwmSaveDesk, FvwmSave, FvwmDebug, FvwmIdent: removed duplicate
	prototypes
	* FvwmIconMan: some Wall fixes; also put "const" in a few places

1999-10-22  Douglas Straub

	* FvwmDragWell/*: new module

1999-10-22  Olivier Chapuis

	* FvwmWinlist/FvwmWinlist.c: Fixed wandering when remapping window,
	Only animates when window is mapped.
	* FvwmWinList/List.c: Fixed animation to wrong place.

1999-10-21  Dan Espen  <dane@mk.telcordia.com>
