@@ -1,3 +1,13 @@
+1999-11-04  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmIconMan/xmanager.c (get_gcs):
+	fixed uninitialised variable
+
+1999-11-04  Olivier Chapuis  olivier.chapuis@free.fr
+
+	* FvwmWinList/FvwmWinList.c (ProcessMessage):
+	Fix a MoveToDesk problem.
+
 1999-11-03  Hippo
 
 	* FvwmIconMan/*: New config options *FvwmIconMan*Reverse
